added article folder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Welcome to Softskills.</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Word Power Made Easy</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <h1>Welcome to Softskills.</h1>
+
+  <div class="">
+    <h4>Books:</h4>
+    <ul>
+      <li><a href="english\vocabulary\word_power_made_easy.html">Word Power Made Easy</a></li>
+    </ul>
+  </div>
+
+</body>
+
+</html>
